--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -4,8 +4,16 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: { }
+one: {
+       email: "admin@example.com",
+       phone: 1234567890,
+       encrypted_password: 12345
+}
 # column: value
 #
-two: { }
+two: {
+       email: "admin1@example.com",
+       phone: 12345678910,
+       encrypted_password: 12345
+}
 # column: value
