--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -23,7 +23,7 @@ two:
   weekday2: MyString
   start_time: 2022-02-13 15:07:02
   end_time: 2022-02-13 15:07:02
-  code: MyString
+  code: csc510
   capacity: 1
   waitlist_capacity: 1
   status: MyString
