--- a/test/fixtures/instructors.yml
+++ b/test/fixtures/instructors.yml
@@ -4,8 +4,14 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: {
+  email: instructor1@ncsu.edu,
+  name: instructor1
+}
 # column: value
 #
-two: {}
+two: {
+  email: instructor2@ncsu.edu,
+  name: instructor2
+}
 # column: value
