--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -4,8 +4,22 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: {
+       name: student1,
+       student_id: student1,
+       dob: 11/05/1997,
+       phone: 12121212121,
+       major: csc,
+       email: student@ncsu.edu
+}
 # column: value
 #
-two: {}
+two: {
+  name: student2,
+  student_id: student2,
+  dob: 11/05/1997,
+  phone: 121221212121,
+  major: csc,
+  email: student2@ncsu.edu
+}
 # column: value
